--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,13 +5,13 @@ GameName=LevinA
 r.MobileHDR=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/Level001.Level001
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/Levels/Level001.Level001
-GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode_C
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+GlobalDefaultGameMode=/Game/Blueprints/MainMenuGM.MainMenuGM_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/Blueprints/MainGameInstance.MainGameInstance_C
 
