--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -92,6 +92,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Skill 2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
 +ActionMappings=(ActionName="Skill 3",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
 +ActionMappings=(ActionName="Skill 4",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Four)
++ActionMappings=(ActionName="Skill 5",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Five)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=W)
